--- a/graduation-frontend/src/index.css
+++ b/graduation-frontend/src/index.css
@@ -10,3 +10,7 @@
 body {
   background-color: #0D0D0D;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
